--- a/SAIS/app.config
+++ b/SAIS/app.config
@@ -3,7 +3,7 @@
 <configSections>
 </configSections>
 <connectionStrings>
-    <add name="Sales_and_Inventory_System__Gadgets_Shop_.Properties.Settings.SIS_DBConnectionString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\bin\Debug\SIS_DB.accdb" providerName="System.Data.OleDb"/>
+    <add name="SAIS.Properties.Settings.SIS_DBConnectionString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\bin\Debug\SIS_DB.accdb" providerName="System.Data.OleDb"/>
 </connectionStrings>
   <startup useLegacyV2RuntimeActivationPolicy="true">
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
